# multi-agent-harness

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  examples_phase3.py  mypy.ini  pyproject.toml  pytest.ini  verify_phase2.py  verify_phase3.py
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  EXTENDING.md  PLAN.md  USAGE.md
src/multi_agent_harness/: __init__.py  config.py
src/multi_agent_harness/adapters/: __init__.py  anthropic.py  base.py  gemini.py  openai.py  xai.py
src/multi_agent_harness/conversation/: __init__.py  analyzer.py  conversation_runner.py  participant.py  transcript.py  turn_runner.py
src/multi_agent_harness/engines/: __init__.py  assistant.py  base.py
src/multi_agent_harness/examples/: __init__.py  assistant.py  debate.py  interrogator.py  judge.py
src/multi_agent_harness/tools/: __init__.py  base.py
tests/: README.md  __init__.py  conftest.py
tests/integration/: __init__.py  test_recorded_responses.py
tests/unit/: __init__.py  test_conversation_runner.py  test_gemini_sdk_response.py  test_openai_adapter.py  test_tool_loop.py  test_turn_runner.py
